# TurkishMorphologicalAnalysis-CPP

./: .gitignore  CMakeLists.txt  DisambiguatedWord.cpp  DisambiguatedWord.h  DisambiguationCorpus.cpp  FiniteStateMachine.cpp  FiniteStateMachine.h  FsmMorphologicalAnalyzer.cpp  FsmMorphologicalAnalyzer.h  FsmParse.cpp  FsmParse.h  FsmParseList.cpp  FsmParseList.h  InflectionalGroup.cpp  InflectionalGroup.h  MetamorphicParse.cpp  MetamorphicParse.h  MorphologicalParse.cpp  MorphologicalParse.h  MorphologicalTag.h  MorphotacticEngine.cpp  MorphotacticEngine.h  README.md  State.cpp  State.h  TestMorphologicalAnalysis.cpp  Transition.cpp  Transition.h  conanfile.py  conanfile.txt
Test/: DisambiguationCorpusTest.cpp  FiniteStateMachineTest.cpp  FsmMorphologicalAnalyzerTest.cpp  FsmParseListTest.cpp  FsmParseTest.cpp  InflectionalGroupTest.cpp  MorphologicalParseTest.cpp  TransitionTest.cpp  catch.hpp
include/: CacheLinkedList.h  CacheNode.h  Corpus.h  CounterHashMap.h  Dictionary.h  LRUCache.h  Language.h  LanguageChecker.h  Paragraph.h  Sentence.h  SentenceSplitter.h  Trie.h  TrieNode.h  TurkishLanguage.h  TxtDictionary.h  TxtWord.h  Word.h  WordFormat.h  XmlAttribute.h  XmlDocument.h  XmlElement.h  XmlTextType.h  XmlTokenType.h
src/: CMakeLists.txt  DisambiguatedWord.cpp  DisambiguatedWord.h  DisambiguationCorpus.cpp  DisambiguationCorpus.h  FiniteStateMachine.cpp  FiniteStateMachine.h  FsmMorphologicalAnalyzer.cpp  FsmMorphologicalAnalyzer.h  FsmParse.cpp  FsmParse.h  FsmParseList.cpp  FsmParseList.h  InflectionalGroup.cpp  InflectionalGroup.h  MetamorphicParse.cpp  MetamorphicParse.h  MorphologicalParse.cpp  MorphologicalParse.h  MorphologicalTag.h  MorphotacticEngine.cpp  MorphotacticEngine.h  State.cpp  State.h  Transition.cpp  Transition.h
